# enterprise-kb

./: .env.example  .gitignore  README.md  pyproject.toml
data/: wiki_bm25.pkl  wiki_import_checkpoint.json
docs/: agent_upgrade_plan.md  architecture.md  development.md  guardrails.md  interview_prep.md  langchain_guide.md  learning_notes.md  operations.md  project_intro.md  session_handoff.md  skill_tracker.md
qdrant_data/: config.yaml
qdrant_data/storage/: raft_state.json
scripts/: demo_langchain_agent.py  demo_router_comparison.py  download_qdrant.sh  run_phase2_watchdog.py  wiki_importer.py
src/enterprise_kb/: __init__.py  config.py  main.py
src/enterprise_kb/agent/: __init__.py  agent_loop.py  default_tools.py  memory.py  tool_executor.py  tool_registry.py
src/enterprise_kb/api/: dependencies.py  routes.py  schemas.py
src/enterprise_kb/core/: chunker.py  document_processor.py  embedder.py  fusion.py  generator.py  llamaindex_router.py  reranker.py  retriever.py  router.py  wiki_navigator.py
src/enterprise_kb/interfaces/: base.py  graph_rag.py  router.py
src/enterprise_kb/langchain/: __init__.py  lc_agent.py  lc_generator.py  lc_memory.py  lc_routes.py  lc_tools.py
src/enterprise_kb/storage/: bm25_index.py  qdrant_store.py
src/enterprise_kb/utils/: logger.py  text_utils.py
static/: index.html
tests/: __init__.py  conftest.py  test_chunker.py  test_config.py  test_document_processor.py  test_router.py  test_wiki_navigator.py
wiki/: SCHEMA.md  index.md
