[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/enterprise_kb"]

[project]
name = "enterprise-kb"
version = "0.1.0"
description = "Enterprise Layered Knowledge Base System with HybridRAG"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Enterprise KB Team"},
]

dependencies = [
    # Web framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",

    # Data validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Document parsing
    "llama-cloud>=0.1.0",
    "python-docx>=1.1.0",
    "markdown>=3.5.0",
    "beautifulsoup4>=4.12.0",

    # Embedding & Reranking
    "FlagEmbedding>=1.2.0",

    # Vector store
    "qdrant-client>=1.9.0",

    # BM25 retrieval
    "rank-bm25>=0.2.2",

    # HTTP client
    "httpx>=0.27.0",
    "aiofiles>=23.2.0",

    # Utilities
    "python-multipart>=0.0.6",
    "tiktoken>=0.6.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
